tests/errors/compiler/float_in_condition/void_func_in_while.c
void func()
{

}

void main()
{
	while (func())
	{
		print("WTF?!");
	}
}
